// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutations returns user 1`] = `
Object {
  "data": Object {
    "login": Object {
      "accessToken": "69:q1aXhT-onz4sWejxcV1s",
      "createdAt": "2018-03-31T07:35:05.000Z",
      "email": "user@example.com",
      "icon": null,
      "id": 69,
      "name": "MyString",
      "selfIntroduction": null,
      "updatedAt": "2018-03-31T07:35:05.000Z",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries returns pong  1`] = `
Object {
  "data": Object {
    "ping": "pong",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
